<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_blood_types"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_learn" />
        <item
            android:id="@+id/nav_donation_process"
            android:icon="@drawable/ic_baseline_double_arrow_24"
            android:title="@string/menu_process" />
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/ic_baseline_question_mark_24"
            android:title="@string/menu_eligibility" />
        <item
            android:id="@+id/nav_donation_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_baseline_source_24"
            android:title="@string/menu_credits" />
    </group>
</menu>